# c-ai-agents-master

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
mission/: 01-Movie-Expert-Agent.ipynb  02-Movie-Recommendation-Bot-Memory.ipynb  03-Complete-Movie-Agent.ipynb
mission/04-Life-Coach/: life-coach-memory.db  main.py  personal_goals.txt
mission/05-Restaurant-Bot/: customer-support-memory.db  input_guardrails.py  main.py  models.py  output_guardrails.py
mission/05-Restaurant-Bot/my_agents/: complaints_agent.py  menu_agent.py  order_agent.py  reservation_agent.py  triage_agent.py
mission/06-KBap/: concept.py  input_guardrails.py  main.py  menu_data.py  menu_tools.py  output_guardrails.py  usage.py
mission/06-KBap/.streamlit/: config.toml  secrets.toml.example
mission/06-KBap/my_agents/: complaints_agent.py  menu_agent.py  order_agent.py  reservation_agent.py  triage_agent.py
mission/artbuddy/: README.md  artbuddy.ipynb  pyproject.toml
mission/story_book_maker/: .gitignore  TROUBLESHOOTING.md  agent.py  callbacks.py  prompt.py  require.md  solutions.md
mission/story_book_maker/sub_agents/illustrator/: agent.py  prompt.py  tools.py
mission/story_book_maker/sub_agents/story_writer/: agent.py  models.py  prompt.py
