[project]
name = "nomad-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.6.1",
    "firecrawl-py>=4.12.0",
    "graphviz>=0.21",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.58.0",
    "openai-agents[viz]>=0.2.6",
    "fpdf2>=2.8.7",
    "pathlib>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
]
