[project]
name = "artbuddy"
version = "0.1.0"
description = "관람객 눈높이 맞춤 AI 미술 도슨트 튜터 (w05 Education Agent)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.6",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.0",
    "python-dotenv>=1.1.1",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
